# tranalisi

./: .gitignore  .travis.yml  Makefile.am  configure.ac
config/: Doxyfile.in  bootstrap  generate_hash.sh  get_git_info.sh  install_eigen.sh  install_minuit2.sh  publishDocumentation.sh
doc/: propa-errors.nb
include/: Makefile.am  tranalisi.hpp
lib/: Dirac.cpp  Dirac.hpp  Makefile.am  ave_err.cpp  ave_err.hpp  boot.cpp  boot.hpp  cify.hpp  compl.hpp  dirac.cpp  dirac.hpp  effective.cpp  effective.hpp  file.cpp  file.hpp  fit.cpp  fit.hpp  functions.cpp  functions.hpp  gevp.cpp  gevp.hpp  grace.cpp  grace.hpp  gslWrap.hpp  hashedFunction.hpp  highPrec.hpp  index.hpp  invert.hpp  jack.cpp  jack.hpp  macros.hpp  math.hpp  meas_vec.cpp  meas_vec.hpp  minimizer.cpp  minimizer.hpp  obs_file.hpp  oper.cpp  oper.hpp  random.cpp  (+14 more)
m4/: ax_openmp.m4  m4_ax_lib_hdf5.m4
projects/: Makefile.am  susc_mag_chir_cond.cpp
projects/BARYONS/: Makefile.am  omega.cpp
projects/BMUNU/: Makefile.am  bmunu.cpp
projects/CHARMONIA/: Makefile.am  radius.cpp
projects/DTOPI/: Makefile.am  common.hpp  d_and_pi.cpp  dtopi.cpp  dtopi4p.cpp
projects/FPIEM/: Makefile.am  fpiem.cpp  fpiem_FSE.cpp  fpiem_FSE.hpp
projects/GILBACCO/: Makefile.am  loadCorrCov.cpp  loadCorrCov.hpp  perbacco.cpp  rRatio.cpp  tauVus.cpp  testManuel.cpp  trambacco.cpp  trambacco.hpp
projects/GM2/: Makefile.am  gm2.cpp
projects/GM3/: Makefile.am  VKVKRepresentation.cpp  VKVKRepresentation.hpp  ZoldRun.cpp  aLaLuscherRepresentation.hpp  amu.cpp  amu.hpp  bubbles.cpp  cachedData.cpp  cachedData.hpp  data.cpp  data.hpp  discoSim.cpp  distanceMultiplicity.hpp  externer.hpp  gilbertoBacco.cpp  gm3.cpp  gm3Test.cpp  heatKernelCalculator.hpp  highPrec.hpp  kernels.cpp  kernels.hpp  luscherZeta.hpp  mPCAC.cpp  mPCAC.hpp  params.cpp  params.hpp  perens.hpp  phiFunction.hpp  physLine.cpp  physLine.hpp  rawData.cpp  rawData.hpp  renoConstants.cpp  renoConstants.hpp  scaleSetting.cpp  seriesOverZ3Calculator.hpp  window.cpp
projects/HADRON_SCHEME/: Makefile.am  qed_scheme.cpp  scheme.cpp  tonning.cpp
projects/HH/: Makefile.am  hh.cpp
projects/IB/: Kl2_IB.cpp  Kl2_IB_FSE.cpp  Kl2_IB_FSE.hpp  Kl2_IB_fit.cpp  Kl2_IB_fit.hpp  Kl2_IB_glb.cpp  Makefile.am  Makefile.am~  common.cpp  common.hpp  disco2.cpp  disco2may.cpp  disco3.cpp  disco_adg.cpp  ellesette.cpp  ellesette_num.cpp  energy_2pi.cpp  gm2_IB.cpp  gm2_IB_common.hpp  gm2_IB_integrators.cpp  gm2_IB_integrators.hpp  gm2_IB_sc.cpp  kaon.cpp  manette.cpp  manette2.cpp  mel.cpp  mel_FSE.cpp  meson_mass_IB.cpp  meson_mass_IB_fit.cpp  meson_mass_IB_fit.hpp  meson_mass_IB_glb.cpp  nucleon.cpp  pi0p.cpp  prova.cpp  reno.cpp  reno_old.cpp  test_antonino.cpp  ultimate.cpp  zs_fr_zp.cpp
projects/MOM/: Makefile.am  Zbil.cpp  Zbil.hpp  Zmeslep.cpp  Zmeslep.hpp  Zq.cpp  Zq.hpp  Zq_sig1.cpp  Zq_sig1.hpp  contractions.cpp  contractions.hpp  corrections.cpp  corrections.hpp  deltam_cr.cpp  deltam_cr.hpp  driver.hpp  evolutions.cpp  evolutions.hpp  geometry.cpp  geometry.hpp  ingredients.cpp  ingredients.hpp  meson_masses.cpp  meson_masses.hpp  mom.cpp  parser.ypp  prop.cpp  prop.hpp  read.cpp  read.hpp  sig3.cpp  sig3.hpp  timings.hpp  tokenizer.lpp  types.hpp
projects/MOM2/: Makefile.am  Zbil.cpp  Zbil.hpp  Zmeslep.cpp  Zmeslep.hpp  Zq.cpp  Zq.hpp  Zq_sig1.cpp  Zq_sig1.hpp  analysis.cpp  analysis.hpp  contractions.cpp  contractions.hpp  corrections.cpp  corrections.hpp  deltam.cpp  deltam.hpp  deltam_cr.cpp  evolutions.hpp  geometry.cpp  geometry.hpp  meson_mass.cpp  meson_mass.hpp  mom.cpp  p2eq0extrap.cpp  p2eq0extrap.hpp  pars.cpp  pars.hpp  parser.ypp  perens.cpp  perens.hpp  pr_bil.cpp  pr_bil.hpp  pr_meslep.cpp  pr_meslep.hpp  prop.cpp  prop.hpp  scan.cpp  scan.hpp  sigma.cpp  (+4 more)
projects/MOM_old/: Zbil.cpp  Zmeslep.cpp  Zmeslep.hpp  Zq_sig1.cpp  contractions.cpp  corrections.cpp  corrections.hpp  driver.hpp  evolutions.hpp  geometry.hpp  ingredients.cpp  meson_masses.cpp  meson_masses.hpp  parser.ypp  prop.cpp  prop.hpp  read.cpp  read.hpp  timings.hpp  tokenizer.lpp
projects/PIPI/: Makefile.am  common.hpp  directSme.cpp  pipi.cpp  smeRad.cpp
projects/PLNG/: Makefile.am  main.cpp  plng.cpp
projects/REPH/: 2pts.cpp  2pts.hpp  3pts.hpp  Makefile.am  base.hpp  compatibility.hpp  exc_study.cpp  interpolate.hpp  localpi.cpp  perens.hpp  permes_combo.hpp  phys_point.hpp  reph.cpp  reph.hpp  reph_convert.cpp  virtualPh.cpp
projects/RHQ/: Makefile.am  rhq.cpp
projects/SMETEST/: B_to_Pi.cpp  BtoD.cpp  Makefile.am  combo_opt.cpp  exc_cont.cpp  motion.cpp  opt_sme.cpp  proGEVP.cpp  smerad.cpp
projects/SPECDENS/: Makefile.am  specDens.cpp  specToy.cpp
projects/SPIPOLLO/: Makefile.am  spi.cpp
projects/STEP_SCALING/: Makefile.am  semi.cpp  step_scaling.cpp
projects/VIRTUALPH/: Makefile.am  global.hpp  nazarioStructures.hpp  perens.hpp  virtualDens.cpp  virtualPh.cpp
projects/fitter/: Makefile.am  data.hpp  fitter.cpp  fitter_parser.ypp  fitter_tokenizer.lpp  node.hpp  operations.cpp  operations.hpp
tools/: Makefile.am  Makefile.am~  backstab.cpp  combine_vdoubles.cpp  djvec_load.cpp  djvec_ratio.cpp  effective_mass.cpp  gevp.cpp  linfit.cpp  multivariate.cpp  onlinemeas.cpp  planfit.cpp  prepare_jackknives.cpp  simple_effective_mass.cpp  test.cpp  test_hdf5.cpp  tuning_marco.cpp  two_pts_fit.cpp  w0.cpp
