AM_CPPFLAGS+=-I$(top_srcdir)/projects/%D%

bin_PROGRAMS+= \
        $(top_builddir)/bin/dtopi \
        $(top_builddir)/bin/d_and_pi \
        $(top_builddir)/bin/dtopi4p

__top_builddir__bin_dtopi_SOURCES= \
	%D%/dtopi.cpp

__top_builddir__bin_d_and_pi_SOURCES= \
	%D%/d_and_pi.cpp

__top_builddir__bin_dtopi4p_SOURCES= \
	%D%/dtopi4p.cpp
