AM_CPPFLAGS+=-I$(top_srcdir)/projects/%D%

###

bin_PROGRAMS+=$(top_builddir)/bin/rRatio

__top_builddir__bin_rRatio_SOURCES= \
	%D%/loadCorrCov.cpp \
	%D%/rRatio.cpp

###

bin_PROGRAMS+=$(top_builddir)/bin/tauVus

__top_builddir__bin_tauVus_SOURCES= \
	%D%/loadCorrCov.cpp \
	%D%/tauVus.cpp

###

bin_PROGRAMS+=$(top_builddir)/bin/testManuel

__top_builddir__bin_testManuel_SOURCES= \
	%D%/testManuel.cpp



# __top_builddir__bin_trambacco_LDADD=$(top_builddir)/lib/libtran.a -lmpfr
