AM_CPPFLAGS+=-I$(top_srcdir)/projects/%D%

bin_PROGRAMS+= \
	$(top_builddir)/bin/qed_scheme \
	$(top_builddir)/bin/scheme \
	$(top_builddir)/bin/tonning

__top_builddir__bin_qed_scheme_SOURCES=%D%/qed_scheme.cpp
__top_builddir__bin_scheme_SOURCES=%D%/scheme.cpp
__top_builddir__bin_tonning_SOURCES=%D%/tonning.cpp

