ACLOCAL_AMFLAGS=-I m4
AM_CPPFLAGS=-I$(top_srcdir)/lib -I$(top_srcdir)/include

LDADD=$(top_builddir)/lib/libtran.a

bin_PROGRAMS= \
	$(top_builddir)/bin/mom

__top_builddir__bin_mom_SOURCES= \
	corrections.cpp \
	contractions.cpp \
	deltam_cr.cpp \
	geometry.cpp \
	ingredients.cpp \
	meson_masses.cpp \
	mom.cpp \
	prop.cpp \
	read.cpp \
	timings.cpp \
	Zbil.cpp \
	Zmeslep.cpp \
	Zq.cpp \
	Zq_sig1.cpp
