AM_CPPFLAGS+=-I$(top_srcdir)/projects/%D%

bin_PROGRAMS+= \
	$(top_builddir)/bin/mom

__top_builddir__bin_mom_SOURCES= \
	%D%/corrections.cpp \
	%D%/contractions.cpp \
	%D%/deltam_cr.cpp \
	%D%/geometry.cpp \
	%D%/ingredients.cpp \
	%D%/meson_masses.cpp \
	%D%/mom.cpp \
	%D%/prop.cpp \
	%D%/read.cpp \
	%D%/timings.cpp \
	%D%/Zbil.cpp \
	%D%/Zmeslep.cpp \
	%D%/Zq.cpp \
	%D%/Zq_sig1.cpp
