AM_CPPFLAGS+=-I$(top_srcdir)/projects/%D%

bin_PROGRAMS+= \
        $(top_builddir)/bin/reph_convert \
        $(top_builddir)/bin/exc_study \
        $(top_builddir)/bin/reph

__top_builddir__bin_exc_study_SOURCES= \
	%D%/exc_study.cpp

__top_builddir__bin_reph_SOURCES= \
	%D%/reph.cpp

__top_builddir__bin_reph_convert_SOURCES= \
	%D%/reph_convert.cpp

#######################################

bin_PROGRAMS+= \
        $(top_builddir)/bin/virtualPh

__top_builddir__bin_virtualPh_SOURCES= \
	%D%/virtualPh.cpp
