AM_CPPFLAGS+=-I$(top_srcdir)/projects/%D%

#############

bin_PROGRAMS+= \
        $(top_builddir)/bin/opt_sme

__top_builddir__bin_opt_sme_SOURCES= \
	%D%/opt_sme.cpp

#############

bin_PROGRAMS+= \
        $(top_builddir)/bin/proGEVP

__top_builddir__bin_proGEVP_SOURCES= \
	%D%/proGEVP.cpp

#############

bin_PROGRAMS+= \
        $(top_builddir)/bin/BtoD

__top_builddir__bin_BtoD_SOURCES= \
	%D%/BtoD.cpp

#############

bin_PROGRAMS+= \
        $(top_builddir)/bin/motion

__top_builddir__bin_motion_SOURCES= \
	%D%/motion.cpp

#         $(top_builddir)/bin/B_to_Pi
#         $(top_builddir)/bin/combo_opt
#         $(top_builddir)/bin/exc_cont
#         $(top_builddir)/bin/smerad

# __top_builddir__bin_exc_cont_SOURCES=
# 	%D%/exc_cont.cpp

# __top_builddir__bin_B_to_Pi_SOURCES=
# 	%D%/B_to_Pi.cpp

# __top_builddir__bin_smerad_SOURCES=
# 	%D%/smerad.cpp

# __top_builddir__bin_combo_opt_SOURCES=
# 	%D%/combo_opt.cpp

